<resources><string name="app_name">            ReLearn</string><string name="Language">            Language</string><string name="Flags">               Flags</string><string name="Images">              Images</string><string name="Addition">            Addition</string><string name="Repeat">              Repeat</string><string name="Learn">               Learn</string><string name="Add_word">            Add</string><string name="Next">                Next</string><string name="Word_English">        Word (English)</string><string name="Word_Rus">            Word (Russian)</string><string name="Voice">               Voice</string><string name="Delete">              Delete</string><string name="Popular_Words">       Popular words</string><string name="My_Directly">         My dictionary</string><string name="Statistics">          Statistics</string><string name="View_dictionary">     View</string><string name="Language_eng">        Language (en)</string><string name="Language_rus">        Language (ru)</string><string name="Sort_descending">     Sort ↓</string><string name="Sort_Ascending">      Sort ↑</string><string name="Sort_alphabetically"> Sort A→Z</string><string name="EnIsSelected">        English is selected</string><string name="RuIsSelected">        Selected Russian language</string><string name="DatabaseEmpty">       The database is empty</string><string name="DatabaseNotConnect">  Error : can not connect to database</string><string name="RepeatedAllWords">    You repeated all the words</string><string name="RepeatedAllImages">   You repeated all the images</string><string name="My_DirectlyIsSelected">   My dictionary is selected</string><string name="Popular_WordsIsSelected"> The dictionary of popular words is chosen</string><string name="HomeIsSelected">          Selected dictionary "Home"</string><string name="EducationIsSelected">     Selected dictionary " Education"</string><string name="Enter_word">          Enter word!</string><string name="Word_exists">         The word exists!</string><string name="Word_Added">          Word added!</string><string name="Word_Not_Exists">     Words do not exist!</string><string name="Word_Delete">         Word delete!</string><string name="Voice_off">           Voice off!</string><string name="Voice_on">            Voice on!</string><string name="Degree_Of_Study">     Degree of study</string><string name="Correct_answers">     Correct answers</string><string name="Today">               Today</string><string name="Month">               Month</string><string name="Average">             Average</string><string name="Number_Learned_Words">      Number of words learned</string><string name="Number_Inconvenient_Words"> Number of inconvenient words</string><string name="Number_Learned_Flags">      Number of flags learned</string><string name="Number_Inconvenient_Flags"> Number of inconvenient flags</string><string name="Number_Learned_Films">      Number of films learned</string><string name="Number_Inconvenient_Films"> Number of inconvenient films</string><string name="Number_Learned_Images">     Number of images learned</string><string name="Number_Inconvenient_Images">Number of inconvenient images</string><string name="Number_Correct_Answers">    The total number of correct answers</string><string name="Correct">             Correct </string><string name="Incorrect">           incorrect </string><string name="Number_Of_Tests">     number of tests </string><string name="Of">                  of</string><string name="Last_testing">        Last testing</string><string name="Incorrect_Up">        Incorrect</string><string name="About_us">            About us</string><string name="Feedback">            Feedback</string><string name="Feedback_comments">   In this section you can leave your wishes, suggestions, comments</string><string name="Send">                Send</string><string name="Message_Sent">        Message sent</string><string name="Enter_Message">       Enter Message</string><string name="Message_about_us">
    \t\t\t Hello!
    \n\t\t\t This application was developed by a team of two people. The application was well received and helped us with the study of foreign words. For this reason, it was decided to realize the wish of users and publish the application.
    \n\t\t\t Since our experience in developing applications for mobile devices is about 1 - 2 months, the application may contain errors.
    \n\t\t\t In this regard, we accept your messages with wishes, suggestions and comments (all messages will be considered and taken into account).
    \n\n\t\t\t Thank you for your attention!
    \n\n\t\t\t Sincerely, SemdelionTeam
    \n\n\t\t\t Mail: SemdelionTeam@gmail.com
  </string><string name="Support_project">     Support the project</string><string name="Education">           Education</string><string name="Home">                Home</string><string name="Settings">            Settings</string><string name="Number_of_word_repeats">    Number of word repeats</string><string name="Number_of_image_repeats">   Number of image repeats</string><string name="Unknown">                   Unknown</string><string name="NotRepeat">                 Not repeat</string><string name="Dictionaries">        Dictionaries</string><string name="ThreeFormsOfVerb">    Verbs</string><string name="DictionaryOver">      Dictionary over</string><string name="Pronunciation">       Pronunciation</string><string name="SeparatorWords">      Word separator:</string><string name="Insert_data">         Insert data</string><string name="DataCorrectness">     Data entered incorrectly</string><string name="WordsAdded">          Words have been added to your dictionary</string><string name="Instruction">         Instruction</string><string name="ComputerScience">     Computer Science</string><string name="Nature">              Nature</string><string name="Films">               Films</string><string name="My_DirectlyDescription">      Contains the words you add to the system.</string><string name="HomeDescription">             The house is a family hearth. It is a symbol of reliability and safety, comfort and warmth.It contains words that you can use to tell about your home.</string><string name="EducationDescription">        Education plays a very important role in our life.Develops all aspects of the human personality, revealing his abilities.</string><string name="Popular_WordsDescription">    This is a dictionary for those who want to master the most necessary and popular words.</string><string name="ThreeFormsOfVerbDescription"> The most commonly used irregular verbs of the English language are presented.</string><string name="ComputerScienceDescription">  IT covers all areas of the creation, transfer, storage and perception of information, not limited to computer technology.</string><string name="NatureDescription">           Nature is all that is not created by human activity. But it is material, and surrounds us everywhere. We suggest to get acquainted with the words on this topic.</string><string name="FlagsDescription">            The dictionary contains flags of the world.</string><string name="FilmsDescription">            The dictionary consists of a list of the best movies according to users.</string><string name="DatatypeWords">       Words: </string><string name="DatatypeImages">      Images: </string><string name="StudiedAt">           studied at: </string><string name="Achievements">        Achievements</string><string name="sign_in">             Sign In</string></resources>