<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="fill_parent" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"><android.support.v7.widget.Toolbar android:id="@+id/toolbarLanguagesLearn" android:theme="@style/ToolbarStyle" android:background="@drawable/toolbar" app:navigationIcon="@mipmap/arrow" android:layout_width="match_parent" android:layout_height="80dp" app:buttonGravity="bottom" xmlns:app="http://schemas.android.com/apk/res-auto"><TextView android:text="@string/Learn" android:gravity="bottom" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="match_parent" /></android.support.v7.widget.Toolbar><TableLayout android:layout_width="match_parent" android:layout_height="match_parent" android:stretchColumns="2"><TextView android:id="@+id/textView_learn_en" android:textColor="@color/TextWhite" android:text="Text" android:textSize="30dp" android:minLines="2" android:layout_width="match_parent" android:layout_height="300dp" android:layout_marginRight="25.0dp" android:layout_marginLeft="25.0dp" android:layout_marginTop="5.0dp" android:gravity="center|center_horizontal" android:defaultFocusHighlightEnabled="true" /><Button android:onClick="Button_Languages_Learn_Next_Click" android:id="@+id/button_learn_languages" android:text="@string/Next" android:background="@drawable/button_style_standard" android:textColor="@color/TextWhite" android:textSize="20dp" android:layout_width="match_parent" android:layout_height="55.0dp" android:layout_marginRight="25.0dp" android:layout_marginLeft="25.0dp" android:layout_marginTop="10.0dp" android:gravity="center" android:keyboardNavigationCluster="false" /><TableRow><ImageButton android:onClick="Button_Languages_Learn_Voice_Enable" android:id="@+id/Button_Speak_TurnOn_TurnOff" android:background="@drawable/button_style_standard" android:src="@mipmap/speak_on" android:layout_width="60dp" android:layout_height="55.0dp" android:layout_marginLeft="25.0dp" android:layout_marginTop="10.0dp" android:layout_gravity="left|right|center" android:gravity="left|right|center" android:scaleType="fitXY" /><Button android:onClick="Button_Languages_Learn_Voice_Click" android:id="@+id/button_voice" android:text="@string/Voice" android:background="@drawable/button_style_standard" android:textColor="@color/TextWhite" android:textSize="20dp" android:layout_column="1" android:layout_width="0dp" android:layout_weight="0.6" android:layout_height="55.0dp" android:layout_marginRight="25.0dp" android:layout_marginTop="20.0dp" android:gravity="center" /></TableRow><Button android:onClick="Button_Languages_Learn_NotRepeat_Click" android:id="@+id/button_NotRepeat_languages" android:text="@string/NotRepeat" android:background="@drawable/button_style_standard" android:textColor="#d7f8fe" android:textSize="20dp" android:layout_width="match_parent" android:layout_height="55.0dp" android:layout_marginRight="25.0dp" android:layout_marginLeft="25.0dp" android:layout_marginTop="20.0dp" android:gravity="center" android:keyboardNavigationCluster="false" /></TableLayout></LinearLayout>