<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"><android.support.v7.widget.Toolbar android:id="@+id/toolbarSetting" app:navigationIcon="@mipmap/arrow" android:theme="@style/ToolbarStyle" android:background="@drawable/toolbar" android:layout_width="match_parent" android:layout_height="80dp" app:buttonGravity="bottom" xmlns:app="http://schemas.android.com/apk/res-auto"><TextView android:text="@string/Settings" android:gravity="bottom" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="match_parent" /></android.support.v7.widget.Toolbar><TextView android:id="@+id/TextView_number_of_word_repeats" android:text="@string/Number_of_word_repeats" android:textColor="?android:attr/actionMenuTextColor" android:textSize="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dp" android:layout_marginRight="40.0dp" android:layout_marginLeft="40.0dp" /><SeekBar android:id="@+id/SeekBarCountRepeatLenguage" android:progressDrawable="@drawable/seekbar_progressbar" android:thumb="@drawable/custom_thumb" android:max="25" android:layout_marginTop="10.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginRight="20.0dp" android:layout_marginLeft="20.0dp" /><TextView android:id="@+id/TextView_number_of_image_repeats" android:text="@string/Number_of_image_repeats" android:textColor="?android:attr/actionMenuTextColor" android:textSize="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dp" android:layout_marginRight="40.0dp" android:layout_marginLeft="40.0dp" /><SeekBar android:id="@+id/SeekBarCountRepeatImages" android:thumb="@drawable/custom_thumb" android:progressDrawable="@drawable/seekbar_progressbar" android:max="25" android:layout_marginTop="10.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginRight="20.0dp" android:layout_marginLeft="20.0dp" /><TextView android:onClick="TextView_Language_Click" android:id="@+id/language" android:textColor="?android:attr/actionMenuTextColor" android:textSize="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dp" android:layout_marginRight="40.0dp" android:layout_marginLeft="40.0dp" /><TextView android:onClick="TextView_Pronunciation_Click" android:id="@+id/pronunciation" android:textColor="?android:attr/actionMenuTextColor" android:textSize="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dp" android:layout_marginRight="40.0dp" android:layout_marginLeft="40.0dp" /></LinearLayout>